--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@types/axios": "^0.9.36",
-    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axios": "^1.11.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "typescript": "^5"
