--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/axios": "^0.9.36",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
